--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,5 +8,9 @@
 }
 
 tr.selected {
-    background-color: #f5f5f5;
+    background-color:#f5f5f5;
+}
+
+.table-hover > tbody > tr.form-row:hover {
+    background-color: inherit;
 }
